--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.client</groupId>
-    <artifactId>service-client</artifactId>
+    <artifactId>spring-boot-client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>service-client</name>
+    <name>spring-boot-client</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
